# aqua-container

./: .dockerignore  .env  .env.sample  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  aquafier.db  diesel.toml  docker-compose copy.yml  docker-compose.yml  package-lock.json  package.json  pages.db  pages.db-shm  pages.db-wal  users.db
.github/workflows/: build_container.yml
actionfiles/aqua_container/dockerfile/: Dockerfile
actionfiles/aqua_container/script/: start_aqua.sh
export/: witness.rs.aqua.json
migrations/: 20241007014830_pages.sql  20241007014939_key_value.sql  20241023193255_create_siwe_sessions_table.sql
migrations/2024-11-26-084134_pages/: down.sql  up.sql
migrations/2024-11-26-084142_siwe/: down.sql  up.sql
migrations/2024-12-04-144740_user_profile/: down.sql  up.sql
migrations/2024-12-11-113924_share/: down.sql  up.sql
src/: main.rs  revision_integrity.rs  schema.rs  util copy.rs  util.rs  verification.rs
src/auth/: mod.rs
src/controllers/: api_controller.rs  auth_controller.rs  configuration_controller.rs  form_controller.rs  mod.rs  share_controller.rs  user_profile_controller.rs  versions_controller.rs
src/db/: mod.rs  pages_db.rs  share.rs  siwe.rs  user_profiles.rs
src/models/: dashboard.rs  file.rs  input.rs  mod.rs  page_data.rs  share_data.rs  user_profiles.rs
templates/: form.html  sample.json
web/: .env.sample  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
web/public/: config.json
web/public/css/: icons.min.css
web/src/: App.tsx  index.tsx  main.tsx  store.ts  util.ts
web/src/components/: CopyableText.tsx  CustomNavbar.tsx  FilePreview.tsx  FileUpload.tsx  ImportByModal.tsx  SignFile.tsx  Stats.tsx  WitnessFile.tsx  aqua_chain_actions.tsx  config.tsx  dropzone_file_actions.tsx
web/src/components/ui/: file-button.tsx  settings.tsx  table.tsx
web/src/components/ui/navigation/: ConnectWallet.tsx  CustomDrawer.tsx  Navbar.tsx  VersionAndDisclaimer.tsx
web/src/config/: constants.ts
web/src/layout/: MainLayout.tsx
web/src/layouts/: MainLayout.tsx
web/src/models/: FileInfo.ts  PageData.ts  UiFileTypes.ts  VersionDetails.ts  fileStat.ts  revision_merge.ts
web/src/network/: api.ts
web/src/pages/: Home.tsx  ImportPage.tsx  LoadConfiguration.tsx  Loading.tsx  SharePage.tsx  configuration.tsx  details.tsx  home.tsx
web/src/pages/components/: details_revision.tsx  details_signature.tsx  details_witness.tsx
web/src/store/: store.ts
web/src/utils/: aqua_funcs.ts  constants.ts  extension_utils.ts  functions.ts
