[package]
name = "aqua-container"
version = "0.1.0"
edition = "2021"
description = "Aquachain File Container"
repository = "https://github.com/inblockio/aqua-container"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use latest main from 
axum = { git = "https://github.com/tokio-rs/axum", features = ["multipart"] }
axum-extra = { git = "https://github.com/tokio-rs/axum" }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb", features = ["local"] }
guardian-common = { git = "https://github.com/inblockio/aqua-guardian", rev = "2ae5c19" }
verifier = { git = "https://github.com/inblockio/aqua-guardian", rev = "2ae5c19" }

# fixed versions
chrono = "0.4.38"
sha3 = "0.10.8"
futures = "0.3"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "limit",  "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ethaddr = "0.2.2"